More fixes on mobile experience

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body, html {
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
-    overflow-y: auto;
+    overflow: hidden;
     font-family: -apple-system, BlinkMacSystemFont, sans-serif;
   }
+  
   
   /* Login and Main Screens */
   #login-screen,
@@ -169,8 +169,8 @@ body, html {
     position: absolute;
     width: 90vw;
     max-width: 500px;
-    max-height: 80vh;
-    overflow-y: auto;
+    max-height: auto;
+    overflow-y: hidden;
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -278,7 +278,7 @@ body, html {
   .note-tab:hover {
     background: rgba(222, 222, 222, 0.3);
   }
-  
+
   .note-tab.active-tab {
     background: rgba(222, 222, 222, 0.5);
     border-color: #666;
@@ -308,6 +308,16 @@ body, html {
     color: #4c3a1a;
     z-index: 5;
   }
+  
+  @media (max-width: 600px) {
+    #notes-content {
+      font-size: 13px;
+      left: 35%;
+      top: 24%;
+      width: 60%;
+    }
+  }
+  
   
   .note-text {
     display: none;
